[gd_scene load_steps=6 format=3 uid="uid://bt4qwladh3rpe"]

[ext_resource type="Script" path="res://Main folder/Stage_Controller.gd" id="1_ae0on"]
[ext_resource type="Texture2D" uid="uid://x3nvu5lab1td" path="res://assets/visuals/office_idle.png" id="2_1kh47"]
[ext_resource type="PackedScene" uid="uid://csskevvgw571a" path="res://monologue/monologue_manager.tscn" id="3_cm8h5"]
[ext_resource type="PackedScene" uid="uid://clsoan160j57n" path="res://popup/Popup_Manager.tscn" id="3_ercgk"]
[ext_resource type="PackedScene" uid="uid://btwn1rhswtcmw" path="res://load_player.tscn" id="4_loadp"]

[node name="Loop1Stage5" type="Node2D"]
script = ExtResource("1_ae0on")
scene_key = "Scene_5_Park"
next_scene_path = "res://Main folder/loops folder/loop1/loop_1_death_scene.tscn"
use_popup = true

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1081.0
offset_bottom = 720.0
color = Color(0.256503, 0.523612, 0.0394513, 1)

[node name="Popup_Manager" parent="." instance=ExtResource("3_ercgk")]
offset_left = 243.0
offset_top = 90.0
offset_right = 243.0
offset_bottom = 90.0

[node name="Player" type="Node2D" parent="."]
scale = Vector2(1.49657, 7.60415)

[node name="Minigame_Manager" type="Control" parent="Player"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Sprite2D" type="Sprite2D" parent="Player"]
position = Vector2(174.398, 66.9371)
scale = Vector2(0.134307, 0.0272327)
texture = ExtResource("2_1kh47")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Monologue_Manager" parent="CanvasLayer" instance=ExtResource("3_cm8h5")]

[node name="load_player" parent="." instance=ExtResource("4_loadp")]
visible = false
